--- a/frontend/style.css
+++ b/frontend/style.css
@@ -25,7 +25,7 @@ button {
   text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
 
-#container2 {
+#output {
   border: solid 5px;
   height: 200px;
 }
