--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 h1 {
+  text-align: center;
   display: flex;
   justify-content: center;
   font-family: fantasy;
@@ -23,9 +24,10 @@ button {
   background-color: chartreuse;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+  text-align: center;
 }
-
+/* 
 #output {
   border: solid 5px;
   height: 200px;
-}
+} */
